# Qcode

./: .env.example  .gitignore  README.md  agent_loop.py  bitark_history.jsonl  pyproject.toml  qoder  start.sh  test.sh  启动简化后端.sh
.qcode/: active_goal.md  test_real_provider_smoke.jsonl  user_profile.md
.tasks/: task_1.json  task_10.json  task_11.json  task_12.json  task_13.json  task_14.json  task_15.json  task_16.json  task_17.json  task_18.json  task_19.json  task_2.json  task_20.json  task_21.json  task_22.json  task_23.json  task_24.json  task_25.json  task_26.json  task_27.json  task_28.json  task_29.json  task_3.json  task_30.json  task_31.json  task_32.json  task_33.json  task_34.json  task_35.json  task_36.json  task_37.json  task_38.json  task_39.json  task_4.json  task_40.json  task_41.json  task_42.json  task_43.json  task_44.json  task_5.json  (+4 more)
.team/: config.json
.transcripts/: transcript_20260402T165852Z.jsonl  transcript_20260402T170313Z.jsonl  transcript_20260402T170336Z.jsonl  transcript_20260402T170408Z.jsonl  transcript_20260402T170445Z.jsonl  transcript_20260402T170532Z.jsonl  transcript_20260402T170552Z.jsonl  transcript_20260402T170618Z.jsonl  transcript_20260402T170638Z.jsonl  transcript_20260402T170701Z.jsonl  transcript_20260402T170734Z.jsonl  transcript_20260402T170757Z.jsonl  transcript_20260402T170818Z.jsonl  transcript_20260402T171627Z.jsonl  transcript_20260405T194958Z.jsonl  transcript_20260406T113014Z.jsonl  transcript_20260406T115133Z.jsonl  transcript_20260406T120022Z.jsonl  transcript_20260406T120116Z.jsonl
docs/: API.md  (+18 more)
(+218 files in other folders)
