[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qcode"
version = "0.1.0"
description = "CLI coding agent harness with an OpenAI-compatible tool loop"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    'tomli>=2.0.1; python_version < "3.11"',
]

[project.scripts]
qcode = "qcode.harness.cli:main"
qoder = "qcode.harness.cli:main"

[tool.setuptools.packages.find]
include = ["qcode*"]
